Remove style attribute

--- a/data/index.html
+++ b/data/index.html
@@ -55,7 +55,7 @@
             <button id="sleepBtn" class="toggle-button">Sleep</button>
             <button id="humidBtn" class="toggle-button">Humid</button>
           </div>
-          <div class="control-row" style="margin-top: 10px">
+          <div class="control-row">
             <button id="lightBtn" class="toggle-button">Light</button>
             <button id="ionizerBtn" class="toggle-button">Ionizer</button>
             <button id="saveBtn" class="toggle-button">Eco</button>
