--- a/data/index.html
+++ b/data/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>AC Control Panel</title>
         <link rel="stylesheet" href="/css" />
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="manifest" href="/manifest.json" />
     </head>
     <body>
         <div id="loadingOverlay" class="overlay">
@@ -21,7 +24,7 @@
             <div id="controlsContainer">
                 <div class="temperature-control">
                     <button id="tempDown" class="temp-button">-</button>
-                    <div class="temp-display"><span id="tempValue">20</span>°C</div>
+                    <div class="temp-display"><span id="tempValue">--</span>°C</div>
                     <button id="tempUp" class="temp-button">+</button>
                 </div>
 
